# rignite

./: .gitignore  Cargo.toml  NOTES.md  README.md  RFU-Android.md  boot_runix.sh  boot_runix_gui.sh  build.py  build_disk_nosudo.sh  build_runix_disk.sh  create_disk.sh  run_qemu.sh
.github/workflows/: release.yml
android_app/: .gitignore  build_app.sh  settings.gradle  setup_gradle.sh
android_app/app/: build.gradle
android_app/app/src/main/: AndroidManifest.xml
android_app/app/src/main/java/com/rignite/flasher/: MainActivity.java
android_app/app/src/main/res/layout/: activity_main.xml
android_app/app/src/main/res/values/: strings.xml  themes.xml
android_app/app/src/main/res/xml/: accessory_filter.xml
host_test_tool/: Cargo.toml
host_test_tool/src/: main.rs
rbc_cli/: Cargo.toml  config.toml
rbc_cli/src/: main.rs
seat-fdpass-smoke/: Cargo.toml  README.md  run-vm-multi.sh  run-vm.sh
seat-fdpass-smoke/src/: main.rs
seat-wirebus-vm/: Cargo.toml  README.md  run-vm.sh
src/: abctl.rs  font.rs  graphics.rs  icons.rs  input.rs  logger.rs  logo.rs  main.rs  rbc.rs
src/boot/: mod.rs
src/fs/: btrfs.rs
src/rdf/: mod.rs
