[package]
name = "rignite"
version = "0.1.0"
edition = "2021"

[dependencies]
uefi = { version = "0.33.0", features = ["alloc", "logger"] }
uefi-raw = "0.9.0"
log = "0.4"
embedded-graphics = "0.8.1"
ab_glyph = { version = "0.2", default-features = false, features = ["libm"] }
libm = "0.2"
qoi = { version = "0.4", default-features = false }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
