[package]
name = "rignite"
version = "0.1.0"
edition = "2021"

[dependencies]
uefi = { version = "0.33.0", features = ["alloc"] }
uefi-raw = "0.9.0"
embedded-graphics = "0.8.1"
fontdue = { version = "0.8", default-features = false }
qoi = { version = "0.4", default-features = false }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
codegen-units = 1
strip = true
