[package]
name = "seat-wirebus-vm"
version = "0.1.0"
edition = "2021"

# End-to-end VM test of rev's REAL seat path: a PID-1 orchestrator boots the
# real rev daemon (bus-serve), then an unprivileged client connects over the
# actual WireBus Highway, sends OpenDevice, and drives the fd rev hands back.
# Unlike seat-fdpass-smoke (which reimplements the arbiter), this exercises
# rev's own open_device + SET_MASTER + bus server + SCM_RIGHTS send path.

[[bin]]
name = "orchestrator"
path = "src/bin/orchestrator.rs"

[[bin]]
name = "seat-client"
path = "src/bin/seat-client.rs"

[dependencies]
wirebus-proto = { path = "../../WireBus/wirebus-proto" }
nix = { version = "0.29", features = ["socket", "uio"] }
libc = "0.2"

[profile.release]
opt-level = 2
